[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "datateam_moss"
version = "0.1.1"
authors = [
  { name="Moethoeli Hooplot", email="moethoeli.hooplot.breeuwer@amsterdam.nl" },
  { name="Hilal Aydin", email="hilal.aydin.breeuwer@amsterdam.nl" },
  { name="Robbin Breeuwer", email="r.j.breeuwer@amsterdam.nl" },
  { name="Koen Hallmann", email="k.hallmann@amsterdam.nl"}
]
description = "Functions needed for datateam MOSS (municipality of Amsterdam)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "tabulate==0.9.0",
  "pandas==1.4.4",
  "xxhash==3.4.1"
]
