[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "datateam_moss"
version = "0.2.5"
authors = [
  { name="XX", email="x@x.nl" }
]
description = "Functions needed for datateam MOSS (municipality of Amsterdam)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "tabulate==0.9.0",
  "xxhash==3.4.1",
  "opentelemetry-sdk==1.39.0",
  "azure-monitor-opentelemetry-exporter==1.0.0b46",
  "azure-mgmt-monitor==7.0.0",
  "pandas==1.4.4"
]
